fix group status and overlapping display

--- a/my-project/src/index.css
+++ b/my-project/src/index.css
@@ -9,10 +9,30 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #00ac6a; /* Adjust scrollbar thumb color */
-    border-radius: 3px; /* Adjust scrollbar thumb border radius */
-  }
+    background-color: #00ac6a;
+    /* Adjust scrollbar thumb color */
+    border-radius: 3px;
+    /* Adjust scrollbar thumb border radius */
+}
 
 ::-webkit-scrollbar-track {
     background: #cbd5e0;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+    width: 12px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 6px;
+    border: 3px solid #f1f1f1;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
